--- a/css/layout.css
+++ b/css/layout.css
@@ -3,13 +3,13 @@ main {
 }
 
 section {
+  display: flex;
   margin: auto;
   width: 480px;
   height: 767px;
 }
 
 div {
-  float: left;
   border: 1px solid;
 }
 
