--- a/css/module.css
+++ b/css/module.css
@@ -1,54 +1,91 @@
 .header {
-  width: 480px;
-  height: 75px;
+  width: 100%;
+  height: 09.7%;
 }
 
 .navBar {
-  width: 480px;
-  height: 150px;
+  width: 100%;
+  height: 19.55%;
 }
 
 .article {
-  width: 480px;
-  height: 125px;
+  width: 100%;
+  height: 16.2%;
 }
 
 .miniArticle {
-  width: 240px;
+  width: 50%;
   height: 250px;
 }
 
 .footer {
-  width: 480px;
-  height: 80px;
+  width: 100%;
+  height: 10.4%;
 }
 
 /* On Desktop */
 @media( min-width: 960px ) {
 
   .header {
-    width: 960px;
-    height: 100px;
+    grid-column: auto / span 5;
+    grid-row: 1;
+    width: 100%;
+    height: 100%;
   }
   
   .navBar {
-    width: 200px;
-    height: 600px;
+    grid-column: 1;
+    grid-row: 2 / span 3;
+    width: 100%;
+    height: 100%;
+    
   }
   
   .article {
-    width: 380px;
-    height: 200px;
+    grid-column: auto / span 2;
+    grid-row: auto / span 1;
+    height: 100%;
+    width: 100%;
   }
   
   .miniArticle {
-    width: 190px;
-    height: 250px;
+    grid-column: auto / span 1;
+    grid-row: auto / span 1;
+    height: 100%;
+    width: 100%;
   }
   
   .footer {
-    width: 760px;
-    height: 150px;
+    grid-column: auto / span 4;
+    grid-row: auto / span 1;
+    height: 100%;
+    width: 100%;
   }
   
 }
+/* 
+
+.header {
+  width: 100%;
+  height: 14.2%;
+}
+
+.navBar {
+  width: 28.5%;
+  height: 85.7%;
+}
+
+.article {
+  width: 39.5%;
+  height: 28.5%;
+}
+
+.miniArticle {
+  width: 19.7%;
+  height: 35.7%;
+}
+
+.footer {
+  width: 79%;
+  height: 21.4%;
+} */
